# qmstk

./: README.md  oneapi_docker_mac.md  oneapi_docker_ubuntu.md  setenv.sh
apps/: pyscf.md  qe.md  qmcpack.md
qmstk-cmake/: CMakeLists.txt
qmstk-cmake/ext_tests/: CMakeLists.txt  xml_read.cpp
