cmake_minimum_required(VERSION 3.16 FATAL_ERROR)

# project name and language
project(qmstk LANGUAGES CXX C Fortran)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_EXTENSIONS OFF)
set(CMAKE_C_STANDARD_REQUIRED ON)

find_package(MPI)

set_property(DIRECTORY PROPERTY EP_BASE ${CMAKE_BINARY_DIR}/subprojects)

set(STAGED_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/stage)
message(STATUS "${PROJECT_NAME} staged install: ${STAGED_INSTALL_PREFIX}")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${qmstk_BINARY_DIR}/bin CACHE PATH "Binary directory")

find_package(LibXml2)

#install libraries in stage
add_subdirectory(external/hdf5)

include(ExternalProject)

ExternalProject_Add(qmcpack-dp
  DEPENDS phdf5
  SOURCE_DIR 
  ${CMAKE_CURRENT_LIST_DIR}/Source/qmcpack
  CMAKE_ARGS 
  -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
  -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
  -DCMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS}
  -DCMAKE_C_FLAGS=${CMAKE_C_FLAGS}
  -DCMAKE_INSTALL_PREFIX=${STAGED_INSTALL_PREFIX}/qmcpack-dp
  -DLIBXML2_INCLUDE_DIR=${LIBXML2_INCLUDE_DIR}
  -DLIBXML2_LIBRARY=${LIBXML2_LIBRARY}
  -DENABLE_PHDF5=ON
  -DHDF5_ROOT=${STAGED_INSTALL_PREFIX}
  )

ExternalProject_Add(qmcpack-sp
  DEPENDS phdf5
  SOURCE_DIR 
  ${CMAKE_CURRENT_LIST_DIR}/Source/qmcpack
  CMAKE_ARGS 
  -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
  -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
  -DCMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS}
  -DCMAKE_C_FLAGS=${CMAKE_C_FLAGS}
  -DCMAKE_INSTALL_PREFIX=${STAGED_INSTALL_PREFIX}/qmcpack-dp
  -DLIBXML2_INCLUDE_DIR=${LIBXML2_INCLUDE_DIR}
  -DLIBXML2_LIBRARY=${LIBXML2_LIBRARY}
  -DENABLE_PHDF5=ON
  -DHDF5_ROOT=${STAGED_INSTALL_PREFIX}
  -DQMC_MIXED_PRECISION=1
  )

ExternalProject_Add(q-e
  DEPENDS phdf5
  SOURCE_DIR
  ${CMAKE_CURRENT_LIST_DIR}/Source/q-e
  CMAKE_ARGS
  -DCMAKE_INSTALL_PREFIX=${STAGED_INSTALL_PREFIX}/qe
  -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
  -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
  -DCMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS}
  -DCMAKE_C_FLAGS=${CMAKE_C_FLAGS}
  -DCMAKE_Fortran_COMPILER=${CMAKE_Fortran_COMPILER}
  -DCMAKE_Fortran_FLAGS=${CMAKE_Fortran_FLAGS}
  -DHDF5_ROOT=${STAGED_INSTALL_PREFIX}
  -DLIBXML2_INCLUDE_DIR=${LIBXML2_INCLUDE_DIR}
  -DLIBXML2_LIBRARY=${LIBXML2_LIBRARY}
  -DHDF5_ROOT=${STAGED_INSTALL_PREFIX}
  -DQE_ENABLE_OPENMP=OFF
  -DQE_ENABLE_HDF5=ON
  )

